styles.css
html {
  font-size: 10px;
  overflow-x: hidden;
}

body {
  margin: 0;
  padding: 0;
  font-family: "Poppins", sans-serif;
  font-style: normal;
  width: 100%;
}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: #fff;
  margin-top: 3.2rem;
}

#mylogo {
  width: 7.6rem;
  height: 2rem;
  font-weight: 700;
  font-size: 1.8rem;
  line-height: 2rem;
  color: #6070ff;
  text-decoration: none;
  margin-left: 5rem;
  animation: animate 1s;
}

@keyframes animate {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

#humberger-bottun {
  width: 2rem;
  cursor: pointer;
  height: 1.25rem;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  margin-right: 0.8rem;
}

#navigation-bar {
  display: flex;
  display: none;
  justify-content: space-between;
  align-items: center;
  margin-right: 5.5rem;
}

#navigation-bar a {
  text-decoration: none;
  color: #344563;
  font-weight: 500;
  font-size: 2rem;
  line-height: 2rem;
  margin: 1.5rem;
  padding: 1.5rem;
}

#navigation-bar a:hover {
  background-color: #6070ff;
  color: #fff;
  padding: 1.2rem 1.5rem;
  border-radius: 0.5rem;
  box-shadow: 1px 2px 4px #310bda;
}

#navigation-bar a:active {
  background-color: #2230d2;
  border-color: #2230d2;
}

.ico {
  width: 100%;
  height: 0.3rem;
  background-color: #6070ff;
}

#sec1 {
  width: 100%;
  height: 70.4rem;
  background: #fff;
  background-image: url("./image/header-shapes\ mobile@2x.svg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  padding: 2.5rem;
  margin-top: 0;
}

#sec1 h1 {
  font-weight: 700;
  height: 15rem;
  font-size: 4rem;
  color: #172b4d;
  width: 100%;
  line-height: 5.2rem;
  padding-top: 6rem;
}

.work-card p {
  width: 29.7rem;
  height: 7.6rem;
  font-weight: 400;
  font-size: 1.5rem;
  line-height: 2.4rem;
  color: #344563;
  margin-left: 2rem;
}

#sec1 p {
  width: 100%;
  height: 14.6rem;
  font-weight: 400;
  font-size: 1.6rem;
  line-height: 2.4rem;
  color: #344563;
}

#connect {
  cursor: pointer;
  width: 11.7rem;
  height: 2.4rem;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 2.4rem;
  color: #7f8cff;
  text-decoration: none;
}

.work-card ul {
  list-style: none;
  display: flex;
  align-items: center;
  margin: 1.6rem;
  padding-left: 0;
  align-content: center;
  margin-left: 3.2rem;
}

.bs ul {
  list-style: none;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0;
}

#img-svg ul {
  display: flex;
  flex-direction: row;
  align-items: center;
  align-content: center;
  list-style: none;
  padding-left: 0;
  margin-bottom: 0;
}

.work-card li {
  font-weight: 500;
  font-size: 1.2rem;
  line-height: 1.6rem;
  color: #6070ff;
  letter-spacing: 0.048rem;
  padding: 0.4rem 1.2rem;
  background: #ebebff;
  border-radius: 0.8rem;
  margin-right: 1rem;
  margin-left: 0;
  float: left;
}

.bs li {
  padding: 1rem;
  text-align: start;
}

#img-svg li {
  padding: 1.8rem;
  padding-left: 0;
  padding-top: 0;
}

#sec2 {
  width: 100%;
  padding-left: 1.12rem;
  padding-top: 15rem;
  background: #e5e5e5;
  display: grid;
  grid-template-columns: auto;
}

.work-card {
  width: 40rem;
  height: 64rem;
  background: #fff;
  border: 1px solid #dfe1e6;
  border-radius: 1.6rem;
  margin-bottom: 10rem;
  display: flex;
  flex-direction: column;
}

.work-card:hover {
  border: 2px solid #a7aeff;
  box-shadow: 1px 4px 4px #cacef7;
  cursor: pointer;
}

.img-project {
  width: 37.6rem;
  height: 24rem;
  border-radius: 0.8rem;
  margin: 1.5rem;
  padding: 1.6rem 0;
  transition: transform 0.5s ease-out;
}

.img-project:hover {
  transform: scale(0.7);
}

.img-project-website {
  display: none;
}

.left-block h2 {
  width: 29.5rem;
  height: 3.6rem;
  color: #172b4d;
  font-weight: 700;
  font-size: 3.2rem;
  line-height: 4.4rem;
  margin-left: 2rem;
  margin-top: 0;
}

.frame span {
  width: 5.5rem;
  height: 1.6rem;
  font-weight: 600;
  font-size: 1.3rem;
  line-height: 1.6rem;
  color: #7a869a;
  margin-left: 2rem;
}

.frame .CANO {
  color: #344563;
}

.left-block {
  padding-left: 2.56rem;
}

.list-removing {
  display: none;
}

.bb {
  cursor: pointer;
  text-decoration: none;
  font-weight: 500;
  font-size: 1.7rem;
  line-height: 2.4rem;
  color: #396df2;
  border: 1px solid #396df2;
  border-radius: 0.8rem;
  background: #fff;
  padding: 1rem 1.5rem;
  margin-left: 2rem;
  margin-top: 1rem;
}

.bb:hover {
  color: #fff;
  background-color: #396df2;
  box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
}

.bb:active {
  color: #fff;
  background-color: #2230d2;
  border-color: #2230d2;
}

.bb:disabled {
  color: #5e6c84;
  border-bottom: #5e6c84;
}

#sec3 {
  width: 100%;
  height: 60rem;
  background: #fff;
  padding: 2.5rem;
  margin-top: 0;
}

#sec3 h2 {
  font-weight: 700;
  font-size: 4rem;
  color: #172b4d;
  width: 100%;
  line-height: 5.2rem;
  padding-top: 5.2rem;
  margin-bottom: 0;
}

#sec3 p {
  width: 100%;
  height: 14.6rem;
  font-weight: 400;
  font-size: 1.6rem;
  line-height: 2.4rem;
  color: #344563;
}

#sec3 .bb {
  margin-left: 0;
  margin-top: 0;
}

.buts {
  margin-left: 0;
  margin-bottom: 5rem;
  padding-bottom: 5rem;
}

.detbut {
  border-bottom: 1px solid #dfe1e6;
}

.detbut summary {
  list-style: none;
  display: flex;
}

.detbut span {
  width: 25.5rem;
  font-size: 2rem;
  font-weight: 500;
  margin: 1.8rem 0;
}

.divbut {
  display: flex;
  align-items: center;
  margin: 1.2rem;
  padding-bottom: 1rem;
  background-color: #f7f7f9;
}

.divbut span {
  margin-left: 1.5rem;
}

.gg img {
  margin-top: 3rem;
  top: 0.5rem;
  left: 0.9rem;
}

main {
  margin-bottom: 50rem;
}

#form-section {
  height: 77.9rem;
  padding-top: 5rem;
  background-color: #6070ff;
  background-image: url("./image-sec-form/contact\ form\ shapes-mobile@2x.svg");
  width: 100%;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  flex-direction: column;
  align-items: center;
  align-content: center;
}

#form-section h2 {
  font-weight: 700;
  font-size: 4rem;
  line-height: 5.2rem;
  color: #fff;
  text-align: center;
  padding-top: 6rem;
  padding-bottom: 0;
}

#form-section p {
  font-weight: 400;
  font-size: 2rem;
  line-height: 2.8rem;
  text-align: center;
  color: #ebebff;
  padding: 2rem;
  padding-top: 0;
}

.bs input {
  border: 1px solid #cfd8dc;
  border-radius: 4px;
  background: #fff;
  width: 30rem;
  height: 3rem;
  color: #172b4d;
  padding-left: 1.5rem;
}

.bs textarea {
  border: 1px solid #cfd8dc;
  border-radius: 4px;
  background: #fff;
  width: 30rem;
  height: 15rem;
  color: #172b4d;
  padding-left: 1.5rem;
  padding-top: 1.5rem;
}

.bs button {
  margin-top: 0;
  margin-left: 1rem;
  color: #6070ff;
}

.bs button:hover {
  background-color: #6070ff;
  box-shadow: 0 8px 16px #283df9;
}

.bs button:active {
  background-color: #2230d2;
}

@media (min-width: 76.8rem) {
  html {
    width: 100%;
    overflow-x: hidden;
  }

  body {
    width: 100%;
  }

  nav {
    width: 100%;
    margin-top: -10rem;
    height: 10rem;
    position: fixed;
  }

  #mylogo {
    font-size: 2rem;
  }

  #humberger-bottun {
    display: none;
  }

  #navigation-bar {
    display: flex;
  }

  #sec1 {
    position: initial;
    width: 100%;
    background-image: url("./img4/Header\ bg.png");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    margin: 10rem auto;
    height: 64rem;
  }

  #sec1 h1 {
    font-size: 4.8rem;
    margin-left: 22.4rem;
    margin-top: 12rem;
    line-height: 6rem;
    margin-bottom: 0;
  }

  .left-block p {
    font-size: 1.6rem;
    width: 94%;
    margin-right: 0.4rem;
  }

  #sec1 p {
    margin-top: 0;
    margin-left: 22.4rem;
    width: 68%;
    font-size: 2rem;
    line-height: 3rem;
  }

  #connect {
    margin-left: 22.4rem;
    font-size: 2rem;
  }

  #img-svg {
    margin-left: 22.4rem;
  }

  .left-block li {
    font-size: 1.6rem;
    padding: 0.8rem 1.6rem;
  }

  #img-svg li {
    margin-right: 0.8rem;
  }

  summary img {
    margin-left: 40rem;
  }

  .divbut img {
    margin: 1rem 4.8rem 0 0;
  }

  #img-svg img {
    width: 3.2rem;
  }

  #sec2 {
    width: 100%;
    background: #e5e5e5;
    padding-right: 3.5rem;
  }

  .work-card {
    display: flex;
    flex-direction: row;
    align-items: center;
    align-content: center;
    width: 117rem;
    height: 49.6rem;
    margin: 1rem auto;
    margin-bottom: 8rem;
  }

  .img-project {
    width: 54.4rem;
    height: 44.8rem;
    padding-left: 2rem;
  }

  .mobile-img {
    display: none;
  }

  .img-project-website {
    display: flex;
  }

  .left-block {
    margin-top: -9rem;
  }

  .left-block h2 {
    font-size: 4rem;
  }

  .frame span {
    font-size: 1.8rem;
  }

  .list-removing {
    display: flex;
  }

  .left-block ul {
    margin-bottom: 2.1rem;
    margin-left: 1.9rem;
  }

  button {
    width: 14.2rem;
    height: 4.8rem;
  }

  .card1 {
    order: 3;
  }

  .card2 {
    order: 4;
    flex-direction: row-reverse;
  }

  .card3 {
    order: 1;
  }

  .card4 {
    order: 2;
    flex-direction: row-reverse;
  }

  .card4 .img-project {
    padding-right: 2rem;
  }

  .card2 .img-project {
    padding-right: 2rem;
  }

  #sec3 {
    display: flex;
    align-items: center;
    align-content: center;
    height: 40rem;
    margin-bottom: 0;
    padding-bottom: 0;
  }

  .top-fram {
    width: 45rem;
    height: 39.2rem;
    margin-left: 8rem;
    margin-right: 8rem;
    margin-top: 0;
    padding-top: 35rem;
  }

  #sec3 h2 {
    font-size: 4rem;
    margin-top: 0;
    padding-top: 0;
    line-height: 5.5rem;
  }

  #sec3 p {
    font-size: 2rem;
    width: 48rem;
    padding-right: 1.6rem;
    line-height: 2.4rem;
  }

  .top-fram #connect {
    margin-left: 0;
  }

  .top-fram #img-svg {
    margin-left: 0;
  }

  .bs ul {
    margin-bottom: 0;
  }

  .top-fram #img-svg ul {
    margin-bottom: 2rem;
  }

  .top-fram .bb {
    width: 19.2rem;
    height: 5.6rem;
    padding: auto;
  }

  .buts {
    width: 68.4rem;
    height: 36rem;
    margin-top: 40rem;
  }

  .languages {
    display: flex;
    flex-direction: row;
  }

  .divbut {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 12.2rem;
    height: 12rem;
    border-radius: 0.8rem;
  }

  .divbut span {
    margin-left: 13.6rem;
    padding-left: 1.6rem;
  }

  #form-section {
    width: 100%;
    background-image: url("./img4/contact\ form-\ background-shape-desktop.svg");
    background-image: url("./img4/contact\ form\ background\ shapes@2x.png");
    background-size: cover;
    background-repeat: no-repeat;
    padding-right: 4.3rem;
    padding-bottom: 3rem;
  }

  .aS {
    text-align: center;
  }

  #form-section h2 {
    font-size: 4rem;
  }

  #form-section p {
    font-size: 2rem;
    width: 38%;
    margin: 1rem auto;
  }

  #form-section p:hover {
    transform: translate(2.4rem);
  }

  .bs {
    font-size: 1.7rem;
  }

  .bs input {
    width: 44.7rem;
    height: 4.8rem;
  }

  .bs textarea {
    width: 44.7rem;
    height: 17rem;
  }

  .bs button {
    margin: 0 20rem;
  }

  .bs button:hover {
    box-shadow: 0 8px 16px rgba(215, 219, 247, 0.24);
    border-color: #cfd8dc;
  }

  #user-name-label {
    display: none;
  }

  #user-email-label {
    display: none;
  }

  #user-message-label {
    display: none;
  }
}

